--- a/css/practicestyle.css
+++ b/css/practicestyle.css
@@ -7,11 +7,11 @@ body {
 }
 
 .home-bg {
-	background: url(images/home-bg.jpg) no-repeat center center fixed;
+	background: url(images/home-bg.jpeg) no-repeat center center fixed;
 }
 
 .contact-bg, .about-bg {
-	background: url(images/abstract-bg.jpg) no-repeat center center fixed;
+	background: url(images/abstract-bg.jpeg) no-repeat center center fixed;
 }
 
 ul {
