--- a/css/practicestyle.css
+++ b/css/practicestyle.css
@@ -41,14 +41,14 @@ h2 {
 	color: #111;
 	font-size: 600%;
 	text-align: center;
-	margin-bottom: 36px;
+	margin-bottom: 18px;
 }
 
 h3 {
 	font-family: 'Courier New', Courier, monotype;
 	color: #111;
 	font-size: 300%;
-	margin: 18px;
+	margin-left: 18px;
 }
 
 p {
