--- a/css/practicestyle.css
+++ b/css/practicestyle.css
@@ -10,7 +10,7 @@ body {
 	background: url(https://raw.githubusercontent.com/jss-mccly/practice/master/images/homebg.jpeg) no-repeat center center fixed;
 }
 
-.contactbg {
+.pagebg {
 	background: url(https://raw.githubusercontent.com/jss-mccly/practice/master/images/abstractbg.jpeg) no-repeat center center fixed;
 }
 
