--- a/css/practicestyle.css
+++ b/css/practicestyle.css
@@ -30,7 +30,7 @@ li {
 
 h1 {
 	font-family: 'Courier New', Courier, monotype;
-	color: #111;
+	color: #000000;
 	font-size: 990%;
 	text-align: left;
 	margin: 12px;
@@ -38,7 +38,7 @@ h1 {
 
 h2 {
 	font-family: Arial, Helvetica, sans-serif;
-	color: #111;
+	color: #000000;
 	font-size: 600%;
 	text-align: center;
 	margin-bottom: 18px;
@@ -46,7 +46,7 @@ h2 {
 
 h3 {
 	font-family: 'Courier New', Courier, monotype;
-	color: #111;
+	color: #000000;
 	font-size: 300%;
 	margin-left: 18px;
 	margin-bottom: -18px;
@@ -54,7 +54,7 @@ h3 {
 
 p {
 	font-family: 'Courier New', Courier, monotype;
-	color: #111;
+	color: #000000;
 	font-size: 200%;
 }
 
@@ -83,8 +83,8 @@ li a {
 }
 
 li a:hover {
-	background-color: #111;
-	color: #3333FF;
+	background-color: #000000;
+	color: #3333ff;
 }
 
 li.home {
@@ -94,8 +94,8 @@ li.home {
 
 footer {
 	font-family: Arial, Helvetica, sans-serif;
-	background-color: #111;
-	color: #3333FF;
+	background-color: #000000;
+	color: #3333ff;
 	text-align: center;
 	font-size: 140%; 
 }
