--- a/css/practicestyle.css
+++ b/css/practicestyle.css
@@ -95,9 +95,9 @@ li.home {
 footer {
 	font-family: Arial, Helvetica, sans-serif;
 	background-color: #000000;
-	color: #3333ff;
+	color: #fff;
 	text-align: center;
-	font-size: 140%; 
+	font-size: 160%;
 }
 
 img {
