--- a/css/practicestyle.css
+++ b/css/practicestyle.css
@@ -95,7 +95,7 @@ li.home {
 footer {
 	font-family: Arial, Helvetica, sans-serif;
 	background-color: #000000;
-	color: #fff;
+	color: #ffffff;
 	text-align: center;
 	font-size: 160%;
 }
