--- a/css/practicestyle.css
+++ b/css/practicestyle.css
@@ -96,7 +96,7 @@ footer {
 	font-family: Arial, Helvetica, sans-serif;
 	background-color: #000000;
 	color: #ffffff;
-	text-align: center;
+	text-align: right;
 	font-size: 160%;
 }
 
